// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Should render User component with custom styles: User with custom styles 1`] = `
<User
  customStyles="custom"
  name="Test Name"
  src="test/src"
>
  <div
    className="user custom"
  >
    <Avatar
      name="Test Name"
      src="test/src"
    >
      <div
        className="avatar"
      >
        <img
          alt=""
          className="avatar__image"
          src="test/src"
        />
        <Loader>
          <div
            className="loader"
          >
            <div
              className="loader__line"
              key="0"
            />
            <div
              className="loader__line"
              key="1"
            />
            <div
              className="loader__line"
              key="2"
            />
            <div
              className="loader__line"
              key="3"
            />
            <div
              className="loader__line"
              key="4"
            />
            <div
              className="loader__line"
              key="5"
            />
            <div
              className="loader__line"
              key="6"
            />
            <div
              className="loader__line"
              key="7"
            />
            <div
              className="loader__line"
              key="8"
            />
            <div
              className="loader__line"
              key="9"
            />
            <div
              className="loader__line"
              key="10"
            />
            <div
              className="loader__line"
              key="11"
            />
          </div>
        </Loader>
      </div>
    </Avatar>
    <div
      className="user__data"
    >
      <Component
        customStyles="user__data-name"
        numberOfLines={1}
        type="h4"
      >
        <Dotdotdot
          clamp={1}
          tagName="div"
          truncationChar="…"
          useNativeClamp={false}
        >
          <div>
            <Component
              customStyles="user__data-name"
              type="h4"
            >
              <h4
                className="text text--heading-4 user__data-name"
              >
                Test Name
              </h4>
            </Component>
          </div>
        </Dotdotdot>
      </Component>
      <Component
        customStyles="user__data-description"
        numberOfLines={1}
        size="XS"
        type="mixed"
      >
        <Dotdotdot
          clamp={1}
          tagName="div"
          truncationChar="…"
          useNativeClamp={false}
        >
          <div>
            <Component
              customStyles="user__data-description"
              size="XS"
              type="mixed"
            >
              <p
                className="text text--xs user__data-description"
              />
            </Component>
          </div>
        </Dotdotdot>
      </Component>
    </div>
  </div>
</User>
`;

exports[`User Should render User component with description: User with description 1`] = `
<User
  description="test description"
  name="Test Name"
  src="test/src"
>
  <div
    className="user"
  >
    <Avatar
      name="Test Name"
      src="test/src"
    >
      <div
        className="avatar"
      >
        <img
          alt=""
          className="avatar__image"
          src="test/src"
        />
        <Loader>
          <div
            className="loader"
          >
            <div
              className="loader__line"
              key="0"
            />
            <div
              className="loader__line"
              key="1"
            />
            <div
              className="loader__line"
              key="2"
            />
            <div
              className="loader__line"
              key="3"
            />
            <div
              className="loader__line"
              key="4"
            />
            <div
              className="loader__line"
              key="5"
            />
            <div
              className="loader__line"
              key="6"
            />
            <div
              className="loader__line"
              key="7"
            />
            <div
              className="loader__line"
              key="8"
            />
            <div
              className="loader__line"
              key="9"
            />
            <div
              className="loader__line"
              key="10"
            />
            <div
              className="loader__line"
              key="11"
            />
          </div>
        </Loader>
      </div>
    </Avatar>
    <div
      className="user__data"
    >
      <Component
        customStyles="user__data-name"
        numberOfLines={1}
        type="h4"
      >
        <Dotdotdot
          clamp={1}
          tagName="div"
          truncationChar="…"
          useNativeClamp={false}
        >
          <div>
            <Component
              customStyles="user__data-name"
              type="h4"
            >
              <h4
                className="text text--heading-4 user__data-name"
              >
                Test Name
              </h4>
            </Component>
          </div>
        </Dotdotdot>
      </Component>
      <Component
        customStyles="user__data-description"
        numberOfLines={1}
        size="XS"
        type="mixed"
      >
        <Dotdotdot
          clamp={1}
          tagName="div"
          truncationChar="…"
          useNativeClamp={false}
        >
          <div>
            <Component
              customStyles="user__data-description"
              size="XS"
              type="mixed"
            >
              <p
                className="text text--xs user__data-description"
              >
                test description
              </p>
            </Component>
          </div>
        </Dotdotdot>
      </Component>
    </div>
  </div>
</User>
`;

exports[`User Should render User component: User 1`] = `
<User
  name="Test Name"
  src="test/src"
>
  <div
    className="user"
  >
    <Avatar
      name="Test Name"
      src="test/src"
    >
      <div
        className="avatar"
      >
        <img
          alt=""
          className="avatar__image"
          src="test/src"
        />
        <Loader>
          <div
            className="loader"
          >
            <div
              className="loader__line"
              key="0"
            />
            <div
              className="loader__line"
              key="1"
            />
            <div
              className="loader__line"
              key="2"
            />
            <div
              className="loader__line"
              key="3"
            />
            <div
              className="loader__line"
              key="4"
            />
            <div
              className="loader__line"
              key="5"
            />
            <div
              className="loader__line"
              key="6"
            />
            <div
              className="loader__line"
              key="7"
            />
            <div
              className="loader__line"
              key="8"
            />
            <div
              className="loader__line"
              key="9"
            />
            <div
              className="loader__line"
              key="10"
            />
            <div
              className="loader__line"
              key="11"
            />
          </div>
        </Loader>
      </div>
    </Avatar>
    <div
      className="user__data"
    >
      <Component
        customStyles="user__data-name"
        numberOfLines={1}
        type="h4"
      >
        <Dotdotdot
          clamp={1}
          tagName="div"
          truncationChar="…"
          useNativeClamp={false}
        >
          <div>
            <Component
              customStyles="user__data-name"
              type="h4"
            >
              <h4
                className="text text--heading-4 user__data-name"
              >
                Test Name
              </h4>
            </Component>
          </div>
        </Dotdotdot>
      </Component>
      <Component
        customStyles="user__data-description"
        numberOfLines={1}
        size="XS"
        type="mixed"
      >
        <Dotdotdot
          clamp={1}
          tagName="div"
          truncationChar="…"
          useNativeClamp={false}
        >
          <div>
            <Component
              customStyles="user__data-description"
              size="XS"
              type="mixed"
            >
              <p
                className="text text--xs user__data-description"
              />
            </Component>
          </div>
        </Dotdotdot>
      </Component>
    </div>
  </div>
</User>
`;
